// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopNavComponent should should be logged in 1`] = `
TopNavComponent {
  "headerClicked": EventEmitter {
    "__isAsync": false,
    "_isScalar": false,
    "closed": false,
    "hasError": false,
    "isStopped": false,
    "observers": Array [],
    "thrownError": null,
  },
  "iconSize": "lg",
  "loginIcon": Object {
    "icon": Array [
      512,
      512,
      Array [],
      "f2f6",
      "M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z",
    ],
    "iconName": "sign-in-alt",
    "prefix": "fas",
  },
  "logoutIcon": Object {
    "icon": Array [
      512,
      512,
      Array [],
      "f2f5",
      "M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z",
    ],
    "iconName": "sign-out-alt",
    "prefix": "fas",
  },
  "store": MockStore {
    "_isScalar": false,
    "actionsObserver": ActionsSubject {
      "_isScalar": false,
      "_value": Object {
        "type": "@ngrx/store/init",
      },
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "initialState": Object {},
    "lastState": Object {},
    "reducerManager": MockReducerManager {
      "_isScalar": false,
      "_value": [Function],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "scannedActions$": Observable {
      "_isScalar": false,
      "source": ActionsSubject {
        "_isScalar": false,
        "_value": Object {
          "type": "@ngrx/store/init",
        },
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
    },
    "selectors": Map {
      [Function] => null,
    },
    "source": MockState {
      "_isScalar": false,
      "_value": Object {},
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        MapSubscriber {
          "_parentOrParents": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": TrestleUser {
              "_email": "",
              "_firstName": "",
              "_id": undefined,
              "_lastName": "",
              "_password": "",
              "_privileges": 3,
            },
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "count": 2,
          "destination": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": TrestleUser {
              "_email": "",
              "_firstName": "",
              "_id": undefined,
              "_lastName": "",
              "_password": "",
              "_privileges": 3,
            },
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "project": [Function],
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
          "thisArg": [Circular],
        },
      ],
      "thrownError": null,
    },
    "state$": MockState {
      "_isScalar": false,
      "_value": Object {},
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        MapSubscriber {
          "_parentOrParents": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": TrestleUser {
              "_email": "",
              "_firstName": "",
              "_id": undefined,
              "_lastName": "",
              "_password": "",
              "_privileges": 3,
            },
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "count": 2,
          "destination": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": TrestleUser {
              "_email": "",
              "_firstName": "",
              "_id": undefined,
              "_lastName": "",
              "_password": "",
              "_privileges": 3,
            },
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "project": [Function],
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
          "thisArg": [Circular],
        },
      ],
      "thrownError": null,
    },
  },
  "user": Store {
    "_isScalar": false,
    "actionsObserver": ActionsSubject {
      "_isScalar": false,
      "_value": Object {
        "type": "@ngrx/store/init",
      },
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "operator": DistinctUntilChangedOperator {
      "compare": undefined,
      "keySelector": undefined,
    },
    "reducerManager": MockReducerManager {
      "_isScalar": false,
      "_value": [Function],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "source": Store {
      "_isScalar": false,
      "actionsObserver": ActionsSubject {
        "_isScalar": false,
        "_value": Object {
          "type": "@ngrx/store/init",
        },
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
      "operator": MapOperator {
        "project": [Function],
        "thisArg": undefined,
      },
      "reducerManager": MockReducerManager {
        "_isScalar": false,
        "_value": [Function],
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
      "source": MockStore {
        "_isScalar": false,
        "actionsObserver": ActionsSubject {
          "_isScalar": false,
          "_value": Object {
            "type": "@ngrx/store/init",
          },
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
        "initialState": Object {},
        "lastState": Object {},
        "reducerManager": MockReducerManager {
          "_isScalar": false,
          "_value": [Function],
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
        "scannedActions$": Observable {
          "_isScalar": false,
          "source": ActionsSubject {
            "_isScalar": false,
            "_value": Object {
              "type": "@ngrx/store/init",
            },
            "closed": false,
            "hasError": false,
            "isStopped": false,
            "observers": Array [],
            "thrownError": null,
          },
        },
        "selectors": Map {
          [Function] => null,
        },
        "source": MockState {
          "_isScalar": false,
          "_value": Object {},
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [
            MapSubscriber {
              "_parentOrParents": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": TrestleUser {
                  "_email": "",
                  "_firstName": "",
                  "_id": undefined,
                  "_lastName": "",
                  "_password": "",
                  "_privileges": 3,
                },
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "_subscriptions": Array [
                SubjectSubscription {
                  "_parentOrParents": [Circular],
                  "_subscriptions": null,
                  "closed": false,
                  "subject": [Circular],
                  "subscriber": [Circular],
                },
              ],
              "closed": false,
              "count": 2,
              "destination": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": TrestleUser {
                  "_email": "",
                  "_firstName": "",
                  "_id": undefined,
                  "_lastName": "",
                  "_password": "",
                  "_privileges": 3,
                },
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "project": [Function],
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
              "thisArg": [Circular],
            },
          ],
          "thrownError": null,
        },
        "state$": MockState {
          "_isScalar": false,
          "_value": Object {},
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [
            MapSubscriber {
              "_parentOrParents": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": TrestleUser {
                  "_email": "",
                  "_firstName": "",
                  "_id": undefined,
                  "_lastName": "",
                  "_password": "",
                  "_privileges": 3,
                },
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "_subscriptions": Array [
                SubjectSubscription {
                  "_parentOrParents": [Circular],
                  "_subscriptions": null,
                  "closed": false,
                  "subject": [Circular],
                  "subscriber": [Circular],
                },
              ],
              "closed": false,
              "count": 2,
              "destination": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": TrestleUser {
                  "_email": "",
                  "_firstName": "",
                  "_id": undefined,
                  "_lastName": "",
                  "_password": "",
                  "_privileges": 3,
                },
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "project": [Function],
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
              "thisArg": [Circular],
            },
          ],
          "thrownError": null,
        },
      },
    },
  },
}
`;

exports[`TopNavComponent should should be logged out 1`] = `
TopNavComponent {
  "headerClicked": EventEmitter {
    "__isAsync": false,
    "_isScalar": false,
    "closed": false,
    "hasError": false,
    "isStopped": false,
    "observers": Array [],
    "thrownError": null,
  },
  "iconSize": "lg",
  "loginIcon": Object {
    "icon": Array [
      512,
      512,
      Array [],
      "f2f6",
      "M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z",
    ],
    "iconName": "sign-in-alt",
    "prefix": "fas",
  },
  "logoutIcon": Object {
    "icon": Array [
      512,
      512,
      Array [],
      "f2f5",
      "M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z",
    ],
    "iconName": "sign-out-alt",
    "prefix": "fas",
  },
  "store": MockStore {
    "_isScalar": false,
    "actionsObserver": ActionsSubject {
      "_isScalar": false,
      "_value": Object {
        "type": "@ngrx/store/init",
      },
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "initialState": Object {},
    "lastState": Object {},
    "reducerManager": MockReducerManager {
      "_isScalar": false,
      "_value": [Function],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "scannedActions$": Observable {
      "_isScalar": false,
      "source": ActionsSubject {
        "_isScalar": false,
        "_value": Object {
          "type": "@ngrx/store/init",
        },
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
    },
    "selectors": Map {
      [Function] => null,
    },
    "source": MockState {
      "_isScalar": false,
      "_value": Object {},
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        MapSubscriber {
          "_parentOrParents": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": null,
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "count": 1,
          "destination": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": null,
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "project": [Function],
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
          "thisArg": [Circular],
        },
      ],
      "thrownError": null,
    },
    "state$": MockState {
      "_isScalar": false,
      "_value": Object {},
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        MapSubscriber {
          "_parentOrParents": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": null,
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "count": 1,
          "destination": DistinctUntilChangedSubscriber {
            "_parentOrParents": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "_subscriptions": Array [
              [Circular],
            ],
            "closed": false,
            "destination": Subscriber {
              "_parentOrParents": null,
              "_subscriptions": Array [
                [Circular],
              ],
              "closed": false,
              "destination": SafeSubscriber {
                "_complete": undefined,
                "_context": Object {
                  "unsubscribe": [Function],
                },
                "_error": [Function],
                "_next": [Function],
                "_parentOrParents": null,
                "_parentSubscriber": [Circular],
                "_subscriptions": null,
                "closed": false,
                "destination": Object {
                  "closed": true,
                  "complete": [Function],
                  "error": [Function],
                  "next": [Function],
                },
                "isStopped": false,
                "syncErrorThrowable": false,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
            },
            "hasKey": true,
            "isStopped": false,
            "key": null,
            "keySelector": undefined,
            "syncErrorThrowable": true,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "project": [Function],
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
          "thisArg": [Circular],
        },
      ],
      "thrownError": null,
    },
  },
  "user": Store {
    "_isScalar": false,
    "actionsObserver": ActionsSubject {
      "_isScalar": false,
      "_value": Object {
        "type": "@ngrx/store/init",
      },
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "operator": DistinctUntilChangedOperator {
      "compare": undefined,
      "keySelector": undefined,
    },
    "reducerManager": MockReducerManager {
      "_isScalar": false,
      "_value": [Function],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [],
      "thrownError": null,
    },
    "source": Store {
      "_isScalar": false,
      "actionsObserver": ActionsSubject {
        "_isScalar": false,
        "_value": Object {
          "type": "@ngrx/store/init",
        },
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
      "operator": MapOperator {
        "project": [Function],
        "thisArg": undefined,
      },
      "reducerManager": MockReducerManager {
        "_isScalar": false,
        "_value": [Function],
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      },
      "source": MockStore {
        "_isScalar": false,
        "actionsObserver": ActionsSubject {
          "_isScalar": false,
          "_value": Object {
            "type": "@ngrx/store/init",
          },
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
        "initialState": Object {},
        "lastState": Object {},
        "reducerManager": MockReducerManager {
          "_isScalar": false,
          "_value": [Function],
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
        "scannedActions$": Observable {
          "_isScalar": false,
          "source": ActionsSubject {
            "_isScalar": false,
            "_value": Object {
              "type": "@ngrx/store/init",
            },
            "closed": false,
            "hasError": false,
            "isStopped": false,
            "observers": Array [],
            "thrownError": null,
          },
        },
        "selectors": Map {
          [Function] => null,
        },
        "source": MockState {
          "_isScalar": false,
          "_value": Object {},
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [
            MapSubscriber {
              "_parentOrParents": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": null,
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "_subscriptions": Array [
                SubjectSubscription {
                  "_parentOrParents": [Circular],
                  "_subscriptions": null,
                  "closed": false,
                  "subject": [Circular],
                  "subscriber": [Circular],
                },
              ],
              "closed": false,
              "count": 1,
              "destination": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": null,
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "project": [Function],
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
              "thisArg": [Circular],
            },
          ],
          "thrownError": null,
        },
        "state$": MockState {
          "_isScalar": false,
          "_value": Object {},
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [
            MapSubscriber {
              "_parentOrParents": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": null,
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "_subscriptions": Array [
                SubjectSubscription {
                  "_parentOrParents": [Circular],
                  "_subscriptions": null,
                  "closed": false,
                  "subject": [Circular],
                  "subscriber": [Circular],
                },
              ],
              "closed": false,
              "count": 1,
              "destination": DistinctUntilChangedSubscriber {
                "_parentOrParents": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "_subscriptions": Array [
                  [Circular],
                ],
                "closed": false,
                "destination": Subscriber {
                  "_parentOrParents": null,
                  "_subscriptions": Array [
                    [Circular],
                  ],
                  "closed": false,
                  "destination": SafeSubscriber {
                    "_complete": undefined,
                    "_context": Object {
                      "unsubscribe": [Function],
                    },
                    "_error": [Function],
                    "_next": [Function],
                    "_parentOrParents": null,
                    "_parentSubscriber": [Circular],
                    "_subscriptions": null,
                    "closed": false,
                    "destination": Object {
                      "closed": true,
                      "complete": [Function],
                      "error": [Function],
                      "next": [Function],
                    },
                    "isStopped": false,
                    "syncErrorThrowable": false,
                    "syncErrorThrown": false,
                    "syncErrorValue": null,
                  },
                  "isStopped": false,
                  "syncErrorThrowable": true,
                  "syncErrorThrown": false,
                  "syncErrorValue": null,
                },
                "hasKey": true,
                "isStopped": false,
                "key": null,
                "keySelector": undefined,
                "syncErrorThrowable": true,
                "syncErrorThrown": false,
                "syncErrorValue": null,
              },
              "isStopped": false,
              "project": [Function],
              "syncErrorThrowable": true,
              "syncErrorThrown": false,
              "syncErrorValue": null,
              "thisArg": [Circular],
            },
          ],
          "thrownError": null,
        },
      },
    },
  },
}
`;
